--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@prisma/client": "3.15.1",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-html-parser": "^2.0.2"
   },
   "devDependencies": {
     "eslint": "8.17.0",
