--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@prisma/client": "3.15.1",
+    "html-react-parser": "^1.4.14",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-html-parser": "^2.0.2"
+    "react-dom": "18.1.0"
   },
   "devDependencies": {
     "eslint": "8.17.0",
