--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,4 @@
 {
   "extends": "next/core-web-vitals",
-  "rules": { "react/no-unescaped-entities": 0, "react/no-unknown-property": 0 }
+  "rules": { "react/no-unescaped-entities": 0, "react/no-unknown-property": 0, "react/jsx-no-target-blank": 0 }
 }
