--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "3.15.1",
+    "@prisma/client": "^4.0.0",
     "html-react-parser": "^1.4.14",
     "next": "12.1.6",
     "react": "18.1.0",
@@ -19,6 +19,6 @@
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "prettier": "2.6.2",
-    "prisma": "^3.15.1"
+    "prisma": "^4.0.0"
   }
 }
