--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^4.0.0",
     "html-react-parser": "^1.4.14",
     "next": "12.1.6",
     "react": "18.1.0",
@@ -18,7 +17,6 @@
   "devDependencies": {
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
-    "prettier": "2.6.2",
-    "prisma": "^4.0.0"
+    "prettier": "2.6.2"
   }
 }
